#3 Изменил _Layout - поправил создание админа - сделал новые миграции

--- a/MyChat/Views/Shared/_Layout.cshtml
+++ b/MyChat/Views/Shared/_Layout.cshtml
@@ -11,21 +11,43 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container-fluid">
-            <a class="navbar-brand" asp-area="" asp-controller="" asp-action="">MyChat</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+            @if (User.Identity.IsAuthenticated)
+            {
+                <a class="navbar-brand" asp-area="" asp-controller="" asp-action="">Чат</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    <ul class="navbar-nav flex-grow-1">
+                        @if (User.IsInRole("admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">Список пользователей</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-route-key="created" asp-controller="" asp-action="">Добавить пользователя</a>
+                            </li>
+                        }
+                        <li class="nav-item">
+                            <form asp-action="LogOff" asp-controller="Account" method="post" asp-antiforgery="true">
+                                <button type="submit" class="btn btn-info">Выйти</button>
+                            </form>
+                        </li>
+                        <li class="nav-item">
+                            <span class="nav-link text-info">Добро пожаловать, @User.Identity.Name</span>
+                        </li>
+                    </ul>
+                </div>
+            }
+            else
+            {
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">Privacy</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Вход/Регистриция</a>
                     </li>
                 </ul>
-            </div>
+            }
         </div>
     </nav>
 </header>
