--- a/MyChat/Views/Account/Register.cshtml
+++ b/MyChat/Views/Account/Register.cshtml
@@ -17,24 +17,26 @@
             <input type="email" class="form-control" id="exampleInputEmail1" asp-for="Email">
             <span class="text-danger" asp-validation-for="Email"></span>
         </div>
-        
         <div class="mb-3">
             <label for="dateBirthday" class="form-label" asp-for="DateOfBirthday"></label>
             <input type="date" class="form-control" id="dateBirthday" asp-for="DateOfBirthday">
             <span class="text-danger" asp-validation-for="DateOfBirthday"></span>
         </div>
-        
         <div class="mb-3">
-            <label for="pass" class="form-label" asp-for="Password"></label>
-            <input type="password" id="pass" class="form-control" aria-labelledby="passHelp" asp-for="Password">
+            <label for="passwordField" class="form-label" asp-for="Password"></label>
+            <div class="input-group inputPassBlock">
+                <input type="password" id="passwordField" class="form-control passField" aria-labelledby="passHelp" asp-for="Password">
+                <button class="text-reset resetButton icoForPass" id="openEyeIco" hidden="hidden"><i class="bi bi-eye-fill"></i></button>
+                <button class="text-reset resetButton icoForPass" id="closeEyeIco"><i class="bi bi-eye-slash-fill"></i></button>
+            </div>
             <div id="passHelp" class="form-text">
                 Пароль должен содержать в себе 1 букву верхнего регистра, 1 букву нижнего регистра, а также минимум 1 цифру, длина пароля не менее 6 символов..
             </div>
             <span class="text-danger" asp-validation-for="Password"></span>
         </div>
         <div class="mb-3">
-            <label for="confirm" class="form-label" asp-for="ConfirmPassword"></label>
-            <input type="password" class="form-control" id="confirm" asp-for="ConfirmPassword">
+            <label for="confirmPasswordField" class="form-label passField" asp-for="ConfirmPassword"></label>
+            <input type="password" class="form-control" id="confirmPasswordField" asp-for="ConfirmPassword">
             <span class="text-danger" asp-validation-for="ConfirmPassword"></span>
             <div id="passwordHelpBlock" class="form-text">
                 Пароли должны совпадать
